# Rocket-Dex-Aggregator

./: Cargo.toml
interfaces/: uniswap_v3_quoter.json
src/: main.rs
src/domain/: error_handler.model.rs  mod.rs  states.rs
src/domain/errors/: checksum_error.rs  dex_parse_error.rs  mod.rs
src/domain/utils/: mod.rs
src/domain/utils/get_pairs/: mod.rs  v2.rs  v3.rs
src/domain/utils/get_reserves/: mod.rs  v2.rs
src/domain/utils/uniswap_interactions/: mod.rs  quick_v2.rs  sushi_v2.rs  uniswap_v3.rs
src/infrastructure/: mod.rs
src/infrastructure/api/: mod.rs
src/infrastructure/api/version_1/: mod.rs  quoter.rs  responses.rs
src/infrastructure/quote/: mod.rs  uniswap_v3.rs
src/utils/: mod.rs  serializer.rs
src/utils/traits/: mod.rs  to_address.rs  to_uint.rs
