[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12.7", features = ["json"] }
lru_time_cache = "0.11.11"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
ethers = "2.0.14"
dotenv = "0.15.0"
futures = "0.3.30"
tokio = { version = "1.39.3", features = ["full"] }
